# grin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
bench/: modelbench.sh  modelbench1.sh  modelbench8b.sh
catalog/: attack_catalog.yaml
docs/: ANDROID-ADB-TAKEOVER.md  LAB-SETUP.md  ROADMAP.md
examples/: acme-extnet.yaml  blackarch-docker.yaml  external-net.yaml  kali-docker.yaml  lab-recon.yaml  localhost.yaml  osint.yaml  ssh-localhost.yaml
examples/lab/: lab-t1-ssh.yaml  lab-t2-web.yaml  lab-t3-chain.yaml
grin/: adhoc.py  aggressive.py  analyst.py  arsenal.py  assessment.py  audit.py  authorize.py  brain.py  catalog.py  checkpoint.py  cigate.py  classes.py  cli.py  closer.py  config.py  cookie_auth.py  crawl.py  discoveries.py  dockerenv.py  doctor.py  engagement.py  engine.py  executor.py  extractors.py  finding.py  gate.py  honeypot.py  inference.py  installer.py  intent.py  interactive.py  journal.py  jsonextract.py  login_discovery.py  loot.py  lootfile.py  manual.py  medic.py  mode.py  notify.py  (+23 more)
grin/app/: __init__.py  api.py  config.py  launch.py  qt_app.py  runner_thread.py  serialize.py  style.qss
grin/assessbench/: __init__.py  manifest.py  report.py  scorer.py
grin/bench/: __init__.py  report.py  runner.py  scorers.py  strategies.py  tasks.py
install/: Install Grin.desktop  Update Grin.desktop
lab/: Dockerfile.t1-ssh  Dockerfile.t2-web  Dockerfile.t3-chain  Dockerfile.t4-crack  Dockerfile.t5-ssti  Dockerfile.t6-pivot-vault  Dockerfile.t6-pivot-web  build.py  docker-compose.yml  matrix-smoke.yaml  matrix.yaml  provision-runner.sh
lab/app/: app.py  (+3 more)
ronin/: analyst.py  audit.py  authorize.py  cli.py  engagement.py  executor.py  finding.py  inference.py  journal.py  objective.py  orchestrator.py  pending.py  prompts.py  report.py  report_store.py  runner.py  spine.py
scripts/: build-macapp.sh  build-setup-macos.sh  install-desktop.sh  install-on-kali.sh  install.sh  labrun.sh  update.sh
site/: app.js  index.html  style.css
tests/: conftest.py  test_adbtakeover.py  test_adhoc.py  test_aggressive.py  test_analyst.py  test_api_engage.py  test_app_api_actions.py  test_app_api_export.py  test_app_api_views.py  test_app_config.py  test_app_launch.py  test_app_runner.py  test_app_serialize.py  test_arsenal.py  test_arsenal_runner.py  test_assessbench_cli.py  test_assessbench_manifest.py  test_assessbench_report.py  test_assessbench_scorer.py  test_assessment_sweep.py  test_audit.py  test_authorize.py  test_bac_probe.py  test_backend_resolution.py  test_bench_report.py  test_bench_runner.py  test_bench_scorers.py  test_bench_strategies.py  test_bench_tasks.py  test_brain.py  test_catalog.py  test_catalog_data.py  test_checkpoint.py  test_cigate.py  test_classes.py  test_cli.py  test_cli_aggressive.py  test_cli_app.py  test_cli_arsenal.py  test_cli_assess.py  (+119 more)
(+33 files in other folders)
