[project]
name = "grin"
version = "0.1.0"
description = "Multi-agent autonomous red-team orchestrator — fail-closed spine, cloud/local brains, self-provisioning Docker arsenal, desktop app"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
docker = ["docker>=7.0"]
app = ["PyQt6>=6.6"]

[tool.setuptools.package-data]
"grin.app" = ["style.qss", "assets/*", "fonts/*"]

[project.scripts]
grin = "grin.cli:main"

[tool.setuptools.packages.find]
include = ["grin*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
