[project]
name = "grin"
version = "0.2.0"
description = "Multi-agent autonomous red-team orchestrator — fail-closed spine, cloud/local brains, self-provisioning Docker arsenal, desktop app"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0", "httpx>=0.27", "pexpect>=4.9"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "flask>=3.0"]
docker = ["docker>=7.0"]
web = ["playwright>=1.40"]
app = ["PyQt6>=6.6", "docker>=7.0"]

[tool.setuptools.package-data]
"grin.app" = ["style.qss", "assets/*", "fonts/*"]
"grin.assessbench" = ["targets/*.yaml"]

[project.scripts]
grin = "grin.cli:main"

[tool.setuptools.packages.find]
include = ["grin*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E701/E702 (multi-statement lines) and E731 (lambda assign) are intentional style in this codebase;
# E741 (l/o names) is used in small comprehensions; E402 is deliberate cycle-avoiding late imports.
ignore = ["E701", "E702", "E731", "E741", "E402"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
